chore: sync with latest upstream edits